namespace Barnabas.Domain.Members;

public enum MemberStatus
{
    AwaitingApproval = 0,
    Approved = 1,
    Declined = 2,
}
